--- a/pom.xml
+++ b/pom.xml
@@ -36,6 +36,12 @@
             <version>1.17.1</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>io.projectreactor</groupId>
+            <artifactId>reactor-core</artifactId>
+            <version>3.4.17</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
     <properties>
