--- a/src/test/resources/docker-compose.yml
+++ b/src/test/resources/docker-compose.yml
@@ -1,33 +1,25 @@
-version: "2"
-
 services:
   zookeeper:
     image: docker.io/bitnami/zookeeper:3.8
     ports:
       - "2181:2181"
-    volumes:
-      - "zookeeper_data:/bitnami"
     environment:
       - ALLOW_ANONYMOUS_LOGIN=yes
   kafka:
-    image: docker.io/bitnami/kafka:3.0
+    image: docker.io/bitnami/kafka:3.1
     ports:
       - "9092:9092"
       # - "29092:29092"
-    volumes:
-      - "kafka_data:/bitnami"
     environment:
       - KAFKA_CFG_ZOOKEEPER_CONNECT=zookeeper:2181
       - ALLOW_PLAINTEXT_LISTENER=yes
       - 'KAFKA_CFG_LISTENER_SECURITY_PROTOCOL_MAP=CLIENT:PLAINTEXT,EXTERNAL:PLAINTEXT'
       - 'KAFKA_CFG_LISTENERS=CLIENT://:29092,EXTERNAL://:9092'
-      - 'KAFKA_CFG_ADVERTISED_LISTENERS=CLIENT://localhost:29092,EXTERNAL://host.docker.internal:9002'
+      - 'KAFKA_CFG_ADVERTISED_LISTENERS=CLIENT://localhost:29092,EXTERNAL://localhost:9093'
       - 'KAFKA_CFG_INTER_BROKER_LISTENER_NAME=CLIENT'
     depends_on:
       - zookeeper
-
-volumes:
-  zookeeper_data:
-    driver: local
-  kafka_data:
-    driver: local
+  pbac:
+    image: pbac-around-kafka:latest
+    ports:
+      - "9093:9093"
