--- a/src/test/resources/benchmark/docker-compose.yml
+++ b/src/test/resources/benchmark/docker-compose.yml
@@ -6,17 +6,19 @@ services:
     environment:
       - ALLOW_ANONYMOUS_LOGIN=yes
   kafka:
-    image: docker.io/bitnami/kafka:3.1
+    image: docker.io/confluentinc/cp-kafka:7.1.1
     ports:
       - "9092:9092"
       # - "29092:29092"
     environment:
-      - KAFKA_CFG_ZOOKEEPER_CONNECT=zookeeper:2181
+      - KAFKA_ZOOKEEPER_CONNECT=zookeeper:2181
       - ALLOW_PLAINTEXT_LISTENER=yes
-      - 'KAFKA_CFG_LISTENER_SECURITY_PROTOCOL_MAP=CLIENT:PLAINTEXT,EXTERNAL:PLAINTEXT'
-      - 'KAFKA_CFG_LISTENERS=CLIENT://:29092,EXTERNAL://:9092'
-      - 'KAFKA_CFG_ADVERTISED_LISTENERS=CLIENT://localhost:29092,EXTERNAL://localhost:9093'
-      - 'KAFKA_CFG_INTER_BROKER_LISTENER_NAME=CLIENT'
+      - 'KAFKA_LISTENER_SECURITY_PROTOCOL_MAP=CLIENT:PLAINTEXT,EXTERNAL:PLAINTEXT'
+      - 'KAFKA_LISTENERS=CLIENT://:29092,EXTERNAL://:9092'
+      - 'KAFKA_ADVERTISED_LISTENERS=CLIENT://localhost:29092,EXTERNAL://localhost:9093'
+      - 'KAFKA_INTER_BROKER_LISTENER_NAME=CLIENT'
+      - 'KAFKA_LOG4J_ROOT_LOGLEVEL=TRACE'
+      - 'KAFKA_LOG4J_LOGGERS="kafka=TRACE,kafka.request.logger=TRACE,org.apache.kafka=TRACE"'
     depends_on:
       - zookeeper
   pbac:
