setup benchmark via tf

--- a/src/test/resources/benchmark/docker-compose.yml
+++ b/src/test/resources/benchmark/docker-compose.yml
@@ -17,6 +17,7 @@ services:
       - 'KAFKA_LISTENERS=CLIENT://:29092,EXTERNAL://:9092'
       - 'KAFKA_ADVERTISED_LISTENERS=CLIENT://localhost:29092,EXTERNAL://localhost:9093'
       - 'KAFKA_INTER_BROKER_LISTENER_NAME=CLIENT'
+      - 'KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR=1'
       #- 'KAFKA_LOG4J_ROOT_LOGLEVEL=TRACE'
       #- 'KAFKA_LOG4J_LOGGERS="kafka=TRACE,kafka.request.logger=TRACE,org.apache.kafka=TRACE"'
     depends_on:
@@ -26,7 +27,7 @@ services:
     ports:
       - "9093:9093"
     environment:
-      - PBAC_MODE=NONE
+      - PBAC_MODE=FILTER_ON_PUBLISH
       - PBAC_KAFKA_HOST=kafka
       - PBAC_KAFKA_PORT=9092
       - PBAC_NUM_THREADS=100
