--- a/src/test/resources/regular-kafka/docker-compose.yml
+++ b/src/test/resources/regular-kafka/docker-compose.yml
@@ -17,5 +17,6 @@ services:
       - 'KAFKA_CFG_LISTENERS=CLIENT://:29092,EXTERNAL://:9092'
       - 'KAFKA_CFG_ADVERTISED_LISTENERS=CLIENT://localhost:29092,EXTERNAL://localhost:9092'
       - 'KAFKA_CFG_INTER_BROKER_LISTENER_NAME=CLIENT'
+      - 'KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR=1'
     depends_on:
       - zookeeper
