--- a/src/test/resources/docker-compose.yml
+++ b/src/test/resources/docker-compose.yml
@@ -15,11 +15,20 @@ services:
       - ALLOW_PLAINTEXT_LISTENER=yes
       - 'KAFKA_CFG_LISTENER_SECURITY_PROTOCOL_MAP=CLIENT:PLAINTEXT,EXTERNAL:PLAINTEXT'
       - 'KAFKA_CFG_LISTENERS=CLIENT://:29092,EXTERNAL://:9092'
-      - 'KAFKA_CFG_ADVERTISED_LISTENERS=CLIENT://localhost:29092,EXTERNAL://localhost:9093'
+      - 'KAFKA_CFG_ADVERTISED_LISTENERS=CLIENT://localhost:29092,EXTERNAL://host.docker.internal:9093'
       - 'KAFKA_CFG_INTER_BROKER_LISTENER_NAME=CLIENT'
     depends_on:
       - zookeeper
   pbac:
-    image: pbac-around-kafka:latest
+    image: us-central1-docker.pkg.dev/pbac-in-pubsub/the-repo/pbac-around-kafka:latest
     ports:
       - "9093:9093"
+    environment:
+      - PBAC_KAFKA_HOST=kafka
+      - PBAC_KAFKA_PORT=9092
+      - PBAC_NUM_THREADS=100
+      - PBAC_MODE=FILTER_ON_PUBLISH
+      - KAFKA_CFG_LOG4J_ROOT_LOGLEVEL=TRACE
+      - KAFKA_CFG_LOG4J_LOGGERS=kafka=TRACE,kafka.request.logger=TRACE,org.apache.kafka=TRACE
+    depends_on:
+      - kafka
