test intended purposes are processed correctly

--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -89,3 +89,8 @@ log4j.additivity.state.change.logger=false
 log4j.logger.kafka.authorizer.logger=INFO, authorizerAppender
 log4j.additivity.kafka.authorizer.logger=false
 
+
+### CONSUMER
+
+log4j.logger.org.apache.kafka.clients.consumer.ConsumerConfig=DEBUG
+
